--- a/LeckerBag/WebContent/3_details_bestellung.html
+++ b/LeckerBag/WebContent/3_details_bestellung.html
@@ -7,10 +7,10 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>       
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>         
         <script> 
 			$(function(){
 		        $("#header").load("header.html", function(){
@@ -18,17 +18,17 @@
 		        });
 			  	$("#footer").load("footer.html"); 
 			});
-		</script>       
+		</script>         
     </head>     
     <body> 
-    	<div class="row" id="header"></div> 
+        <div class="row" id="header"></div>         
         <div class="row">
             <div class="col-md-12">
                 <div class="container wrapper">
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
                             <h3>Details zur Bestellung</h3> 
-                            <p>&nbsp;</p>
+                            <p>Hier können Sie die Details der ausgewählten Bestellung einsehen<br></p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
@@ -46,7 +46,7 @@
                         </li>
                         <li>&nbsp;
                             <a href="1_details_abo.html">Details des Abonnements&nbsp;</a>
-                        </li>                                                                            &nbsp;
+                        </li>                                                                                                                            &nbsp;
                         <li>&nbsp;Details zur Bestellung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -100,7 +100,7 @@
                                             <p>Fett: 22g<br></p>
                                         </div>
                                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 text-center">
-                                            <img src="file:///C:/Users/mpost/Desktop/url.gif" height="150" width="150">                                             
+                                            <img src="pics/torte.gif" height="150" width="150">                                             
                                         </div>
                                     </div>
                                     <div class="row" style="margin-bottom: 25px">
@@ -124,7 +124,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-sm-12 text-right col-md-5 col-lg-5">
-                                            <button type="button" class="button_paulo_3 button_paulo">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
+                                            <button type="button" class="button_paulo_3 button_paulo">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    &nbsp;
                                             <button type="button" class="button_paulo">Drucken</button>
                                         </div>
                                     </div>                                     
@@ -136,8 +136,8 @@
             </div>
         </div>         
         <div class="row" id="footer"></div>         
-        <!-- Ende des Dokumentes -->                
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>          
+        <!-- Ende des Dokumentes -->         
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
