--- a/LeckerBag/WebContent/4_stornierung_bag.html
+++ b/LeckerBag/WebContent/4_stornierung_bag.html
@@ -7,10 +7,10 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>     
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>         
         <script> 
 			$(function(){
 		        $("#header").load("header.html", function(){
@@ -18,7 +18,7 @@
 		        });
 			  	$("#footer").load("footer.html"); 
 			});
-		</script>          
+		</script>         
     </head>     
     <body>
         <div class="row" id="header"></div>         
@@ -28,7 +28,7 @@
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10" data-pg-collapsed="">
                             <h3>Ihre Stornierung</h3> 
-                            <p>&nbsp;Stornierung des Leckerbags</p>
+                            <p>&nbsp;Hier können Sie das ausgewählte Leckerbag stornieren</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
@@ -46,7 +46,7 @@
                         </li>
                         <li>&nbsp;
                             <a href="1_details_abo.html">Details des Abonnement&nbsp;</a>
-                        </li>                                                                                                                                                                                                                                                                            &nbsp;
+                        </li>                                                                                                                                                                                                                                                                                                    &nbsp;
                         <li>&nbsp;Ihre Stornierung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -113,7 +113,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-sm-12 text-right col-md-5 col-lg-5">
-                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='1_details_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
+                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='1_details_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        &nbsp;
                                             <button type="button" class="btn btn-default button_paulo" onclick="location.href='1_details_abo.html'">Stornieren</button>
                                         </div>
                                     </div>                                     
@@ -126,7 +126,7 @@
         </div>
         <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
