--- a/LeckerBag/WebContent/6_rezension_abo.html
+++ b/LeckerBag/WebContent/6_rezension_abo.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -18,7 +18,7 @@
 		        });
 			  	$("#footer").load("footer.html"); 
 			});
-		</script>        
+		</script>         
     </head>     
     <body>
         <div class="row" id="header"></div>
@@ -28,7 +28,7 @@
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10" data-pg-collapsed="">
                             <h3>Ihre Rezension</h3> 
-                            <p>&nbsp;</p>
+                            <p>&nbsp;Hier können Sie eine Rezension zum ausgewählten Abonnement abgeben</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#"><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
@@ -43,7 +43,7 @@
                         </li>                         
                         <li>&nbsp;
                             <a href="2_uebersicht_abo.html">Alle Abonnements&nbsp;</a>
-                        </li>                                                                                                                                                                            &nbsp;
+                        </li>                                                                                                                                                                                                    &nbsp;
                         <li>&nbsp;Ihre Rezension &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -74,7 +74,7 @@
                                     </div>
                                     <div class="row text-right">
                                         <div class="col-xs-12 col-sm-12 text-right col-md-12 col-lg-12"> 
-                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                &nbsp;
+                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
                                             <button type="button" class="btn btn-default button_paulo" onclick="location.href='2_uebersicht_abo.html'">Senden</button>
                                         </div>
                                     </div>                                     
@@ -87,7 +87,7 @@
         </div>
         <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>       
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
