--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -125,6 +125,60 @@
                     </div>
                 </div>
                 <div class="row">
+				    <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
+				        <div class="row dash_element_holder">
+				            <div class="col-md-12 dash_element" data-pg-collapsed> 
+				                <h4>Meine Guthaben</h4>
+				                <h5>Guthaben bei verschiedenen Lieferanten</h5>
+				                <div class="row" id="dashboard_stornierungen_tb_holder">
+				                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-right option_dashboard_lieferant_1" data-pg-collapsed="">
+				                        <button type="button" class="btn btn-default btn_icon btn_icon btn_icon_padding" onclick="">
+				                            <i class="fa fa-print fa-lg"></i>
+				                        </button>
+				                        <button type="button" class="btn btn-default btn_icon btn_icon" onclick="">
+				                            <i class="fa fa-lg fa-download"></i>
+				                        </button>
+				                    </div>
+				                    <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" id="dashboard_stornierung_tb">
+				                        <table class="table" id="yui_patched_v3_18_1_1_1434358742874_382"> 
+				                            <thead> 
+				                                <tr> 
+				                                    <th>Lieferant</th>                                     
+				                                    <th>Guthaben</th>
+				                                    <th>Letzte Transaktion</th>
+				                                </tr>                                 
+				                            </thead>                             
+				                            <tbody> 
+				                                <tr data-pg-collapsed=""> 
+				                                    <td>Bäckerei Schwarz</td>                                     
+				                                    <td>12,00 €</td>
+				                                    <td>- 02,00 € (
+				                                        <a style="background-color: rgb(254, 254, 254);">29.06.2015)</a>
+				                                    </td>
+				                                </tr>
+				                                <tr data-pg-collapsed=""> 
+				                                    <td>Bäckerei Maier</td>                                     
+				                                    <td>04,30 €</td>
+				                                    <td>+ 04,30 € (
+				                                        <a style="background-color: rgb(254, 254, 254);">26.06.2015)</a>&nbsp;
+				                                    </td>
+				                                </tr>
+				                                <tr data-pg-collapsed=""> 
+				                                    <td>Bäckerei Müller</td>                                     
+				                                    <td>05,20 €</td>
+				                                    <td>+ 04,20 €&nbsp;(
+				                                        <a style="background-color: rgb(254, 254, 254);">26.06.2015)</a>&nbsp;
+				                                    </td>
+				                                </tr>
+				                            </tbody>
+				                        </table>
+				                    </div>
+				                </div>
+				            </div>
+				        </div>
+				    </div>
+				</div>
+                <div class="row">
                     <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 dash_element_col">
                         <div class="row dash_element_holder" data-pg-collapsed="">
                             <div class="col-md-12 dash_element"> 
