--- a/LeckerBag/WebContent/5_stornierung_abo.html
+++ b/LeckerBag/WebContent/5_stornierung_abo.html
@@ -7,10 +7,10 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>     
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>         
         <script> 
 			$(function(){
 		        $("#header").load("header.html", function(){
@@ -18,7 +18,7 @@
 		        });
 			  	$("#footer").load("footer.html"); 
 			});
-		</script>            
+		</script>         
     </head>     
     <body> 
         <div class="row" id="header"></div>
@@ -27,8 +27,8 @@
                 <div class="container wrapper">
                     <div class="row">
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10">
-                            <h3>Ihre Stornierung</h3> 
-                            <p>&nbsp;Stornierung des Abonnement</p>
+                            <h3>Ihre Kündigung</h3> 
+                            <p>&nbsp;Hier können Sie das ausgewählte Abonnement kündigen</p>
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2">
                             <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
@@ -43,7 +43,7 @@
                         </li>                         
                         <li>&nbsp;
                             <a href="2_uebersicht_abo.html">Alle Abonnements&nbsp;</a>
-                        </li>                                                                                                                                                                                                                                                        &nbsp;
+                        </li>                                                                                                                                                                                                                                                                                &nbsp;
                         <li>&nbsp;Ihre Stornierung &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>                         
                     </ol>
                     <div class="row">
@@ -107,7 +107,7 @@
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-sm-12 text-right col-md-5 col-lg-5">
-                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                &nbsp;
+                                            <button type="button" class="btn btn-default button_paulo_3 button_paulo" onclick="location.href='2_uebersicht_abo.html'">Abbrechen</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            &nbsp;
                                             <button type="button" class="btn btn-default button_paulo" onclick="location.href='2_uebersicht_abo.html'">Stornieren</button>
                                         </div>
                                     </div>                                     
@@ -118,9 +118,9 @@
                 </div>                 
             </div>
         </div>         
-        <div class="row" id="footer"></div>              
+        <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>        
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
